src/test/ui/parser/issue-14303-fncall.stderr
error: incorrect parameter order
  --> $DIR/issue-14303-fncall.rs:14:26
   |
LL |         .collect::<Vec<S<_, 'a>>>();
   |                          ^^^^^ help: reorder the arguments: `'a, _`

error: aborting due to previous error

